Part of 1.1 done

--- a/main/html/content-areas/data/data.html
+++ b/main/html/content-areas/data/data.html
@@ -4,53 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Data - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Data</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html" class="subtopic-box">
-            <h2>6.1 Data, Information, and Knowledge</h2>
-        </a>
-        <a href="subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html" class="subtopic-box">
-            <h2>6.2 Methods of Transforming Data</h2>
-        </a>
-        <a href="subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html" class="subtopic-box">
-            <h2>6.3 Data Taxonomy</h2>
-        </a>
-        <a href="subtopic/6.4-data-types/6.4-data-types.html" class="subtopic-box">
-            <h2>6.4 Data Types</h2>
-        </a>
-        <a href="subtopic/6.5-data-formats/6.5-data-formats.html" class="subtopic-box">
-            <h2>6.5 Data Formats</h2>
-        </a>
-        <a href="subtopic/6.6-structures-for-storing-data/6.6-structures-for-storing-data.html" class="subtopic-box">
-            <h2>6.6 Structures for Storing Data</h2>
-        </a>
-        <a href="subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html" class="subtopic-box">
-            <h2>6.7 Data Dimensions and Maintenance</h2>
-        </a>
-        <a href="subtopic/6.8-data-systems/6.8-data-systems.html" class="subtopic-box">
-            <h2>6.8 Data Systems</h2>
-        </a>
-        <a href="subtopic/6.9-data-visualisation/6.9-data-visualisation.html" class="subtopic-box">
-            <h2>6.9 Data Visualisation</h2>
-        </a>
-        <a href="subtopic/6.10-data-models/6.10-data-models.html" class="subtopic-box">
-            <h2>6.10 Data Models</h2>
-        </a>
-        <a href="subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html" class="subtopic-box">
-            <h2>6.11 Data Access Across Platforms</h2>
-        </a>
-        <a href="subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html" class="subtopic-box">
-            <h2>6.12 Data Analysis Tools</h2>
-        </a>
+        <h2>Content Area 6: Data</h2>
+        <a href="subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html" class="subtopic-box">6.1 Data, Information, and Knowledge</a>
+        <a href="subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html" class="subtopic-box">6.2 Methods of Transforming Data</a>
+        <a href="subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html" class="subtopic-box">6.3 Data Taxonomy</a>
+        <a href="subtopic/6.4-data-types/6.4-data-types.html" class="subtopic-box">6.4 Data Types</a>
+        <a href="subtopic/6.5-data-formats/6.5-data-formats.html" class="subtopic-box">6.5 Data Formats</a>
+        <a href="subtopic/6.6-structures-for-storing-data/6.6-structures-for-storing-data.html" class="subtopic-box">6.6 Structures for Storing Data</a>
+        <a href="subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html" class="subtopic-box">6.7 Data Dimensions and Maintenance</a>
+        <a href="subtopic/6.8-data-systems/6.8-data-systems.html" class="subtopic-box">6.8 Data Systems</a>
+        <a href="subtopic/6.9-data-visualisation/6.9-data-visualisation.html" class="subtopic-box">6.9 Data Visualisation</a>
+        <a href="subtopic/6.10-data-models/6.10-data-models.html" class="subtopic-box">6.10 Data Models</a>
+        <a href="subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html" class="subtopic-box">6.11 Data Access Across Platforms</a>
+        <a href="subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html" class="subtopic-box">6.12 Data Analysis Tools</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
