--- a/main/html/content-areas/digital-environments/digital-environments.html
+++ b/main/html/content-areas/digital-environments/digital-environments.html
@@ -4,29 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Digital Environments - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Digital Environments</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/7.1-physical-digital-environments/7.1-physical-digital-environments.html" class="subtopic-box">
-            <h2>7.1 Physical and Digital Environments</h2>
-        </a>
-        <a href="subtopic/7.2-virtual-digital-environments/7.2-virtual-digital-environments.html" class="subtopic-box">
-            <h2>7.2 Virtual Digital Environments</h2>
-        </a>
-        <a href="subtopic/7.3-digital-networks/7.3-digital-networks.html" class="subtopic-box">
-            <h2>7.3 Digital Networks</h2>
-        </a>
-        <a href="subtopic/7.4-cloud/7.4-cloud.html" class="subtopic-box">
-            <h2>7.4 Cloud</h2>
-        </a>
+        <h2>Content Area 7: Digital Environments</h2>
+        <a href="subtopic/7.1-physical-digital-environments/7.1-physical-digital-environments.html" class="subtopic-box">7.1 Physical and Digital Environments</a>
+        <a href="subtopic/7.2-virtual-digital-environments/7.2-virtual-digital-environments.html" class="subtopic-box">7.2 Virtual Digital Environments</a>
+        <a href="subtopic/7.3-digital-networks/7.3-digital-networks.html" class="subtopic-box">7.3 Digital Networks</a>
+        <a href="subtopic/7.4-cloud/7.4-cloud.html" class="subtopic-box">7.4 Cloud</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
