--- a/main/html/content-areas/emerging-issues/emerging-issues.html
+++ b/main/html/content-areas/emerging-issues/emerging-issues.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Emerging Issues - TLevelTutor</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Emerging Issues</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html" class="subtopic-box">
-            <h2>3.1 Impact of Digital Technologies</h2>
-        </a>
-        <a href="subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html" class="subtopic-box">
-            <h2>3.2 Emerging Technologies</h2>
-        </a>
+        <h2>Content Area 3: Emerging Issues</h2>
+        <a href="subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html" class="subtopic-box">3.1 Impact of Digital Technologies</a>
+        <a href="subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html" class="subtopic-box">3.2 Emerging Technologies</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
