--- a/main/html/content-areas/business-context/business-context.html
+++ b/main/html/content-areas/business-context/business-context.html
@@ -4,29 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Business Context - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Business Context</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/5.1-business-environment/5.1-business-environment.html" class="subtopic-box">
-            <h2>5.1 Business Environment</h2>
-        </a>
-        <a href="subtopic/5.2-digital-value-to-organisations/5.2-digital-value-to-organisations.html" class="subtopic-box">
-            <h2>5.2 Digital Value to Organisations</h2>
-        </a>
-        <a href="subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" class="subtopic-box">
-            <h2>5.3 Risk to Organisations of Using Digital Systems</h2>
-        </a>
-        <a href="subtopic/5.4-technical-change-management/5.4-technical-change-management.html" class="subtopic-box">
-            <h2>5.4 Technical Change Management</h2>
-        </a>
+        <h2>Content Area 5: Business Context</h2>
+        <a href="subtopic/5.1-business-environment/5.1-business-environment.html" class="subtopic-box">5.1 Business Environment</a>
+        <a href="subtopic/5.2-digital-value-to-organisations/5.2-digital-value-to-organisations.html" class="subtopic-box">5.2 Digital Value to Organisations</a>
+        <a href="subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" class="subtopic-box">5.3 Risk to Organisations of Using Digital Systems</a>
+        <a href="subtopic/5.4-technical-change-management/5.4-technical-change-management.html" class="subtopic-box">5.4 Technical Change Management</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
