--- a/main/html/content-areas/intro-to-programming/intro-to-programming.html
+++ b/main/html/content-areas/intro-to-programming/intro-to-programming.html
@@ -4,54 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Introduction to Programming - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Introduction to Programming</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/2.1-standard-data-types/2.1-standard-data-types.html" class="subtopic-box">
-            <h2>2.1 Standard Data Types</h2>
-        </a>
-        <a href="subtopic/2.2-variables-and-constants/2.2-variables-and-constants.html" class="subtopic-box">
-            <h2>2.2 Variables and Constants</h2>
-        </a>
-        <a href="subtopic/2.3-data-structures/2.3-data-structures.html" class="subtopic-box">
-            <h2>2.3 Data Structures</h2>
-        </a>
-        <a href="subtopic/2.4-operators/2.4-operators.html" class="subtopic-box">
-            <h2>2.4 Operators</h2>
-        </a>
-        <a href="subtopic/2.5-input-and-output/2.5-input-and-output.html" class="subtopic-box">
-            <h2>2.5 Input and Output</h2>
-        </a>
-        <a href="subtopic/2.6-actions/2.6-actions.html" class="subtopic-box">
-            <h2>2.6 Actions</h2>
-        </a>
-        <a href="subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html" class="subtopic-box">
-            <h2>2.7 Functions and Procedures</h2>
-        </a>
-        <a href="subtopic/2.8-validation/2.8-validation.html" class="subtopic-box">
-            <h2>2.8 Validation</h2>
-        </a>
-        <a href="subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html" class="subtopic-box">
-            <h2>2.9 Design Considerations and Programming Practices</h2>
-        </a>
-        <a href="subtopic/2.10-robust-code/2.10-robust-code.html" class="subtopic-box">
-            <h2>2.10 Robust Code</h2>
-        </a>
-        <a href="subtopic/2.11-common-algorithms/2.11-common-algorithms.html" class="subtopic-box">
-            <h2>2.11 Common Algorithms</h2>
-        </a>
-        <a href="subtopic/2.12-testing/2.12-testing.html" class="subtopic-box">
-            <h2>2.12 Testing</h2>
-        </a>
-    </main>
+    <h2>Content Area 2: Introduction to Programming</h2>
+    <a href="subtopic/2.1-standard-data-types/2.1-standard-data-types.html" class="subtopic-box">2.1 Standard Data Types</a>
+    <a href="subtopic/2.2-variables-and-constants/2.2-variables-and-constants.html" class="subtopic-box">2.2 Variables and Constants</a>
+    <a href="subtopic/2.3-data-structures/2.3-data-structures.html" class="subtopic-box">2.3 Data Structures</a>
+    <a href="subtopic/2.4-operators/2.4-operators.html" class="subtopic-box">2.4 Operators</a>
+    <a href="subtopic/2.5-input-and-output/2.5-input-and-output.html" class="subtopic-box">2.5 Input and Output</a>
+    <a href="subtopic/2.6-actions/2.6-actions.html" class="subtopic-box">2.6 Actions</a>
+    <a href="subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html" class="subtopic-box">2.7 Functions and Procedures</a>
+    <a href="subtopic/2.8-validation/2.8-validation.html" class="subtopic-box">2.8 Validation</a>
+    <a href="subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html" class="subtopic-box">2.9 Design Considerations and Programming Practices</a>
+    <a href="subtopic/2.10-robust-code/2.10-robust-code.html" class="subtopic-box">2.10 Robust Code</a>
+    <a href="subtopic/2.11-common-algorithms/2.11-common-algorithms.html" class="subtopic-box">2.11 Common Algorithms</a>
+    <a href="subtopic/2.12-testing/2.12-testing.html" class="subtopic-box">2.12 Testing</a>
+</main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
