--- a/main/html/content-areas/legislation-and-regulatory-requirements/legislation-and-regulatory-requirements.html
+++ b/main/html/content-areas/legislation-and-regulatory-requirements/legislation-and-regulatory-requirements.html
@@ -4,23 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Legislation and Regulatory Requirements - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
         </a>
         <div class="header-text">
             <h1>Legislation and Regulatory Requirements</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/4.1-legislation/4.1-legislation.html" class="subtopic-box">
-            <h2>4.1 Legislation</h2>
-        </a>
-        <a href="subtopic/4.2-guidelines/4.2-guidelines.html" class="subtopic-box">
-            <h2>4.2 Guidelines</h2>
-        </a>
+        <h2>Content Area 4: Legislation and Regulatory Requirements</h2>
+        <a href="subtopic/4.1-legislation/4.1-legislation.html" class="subtopic-box">4.1 Legislation</a>
+        <a href="subtopic/4.2-guidelines/4.2-guidelines.html" class="subtopic-box">4.2 Guidelines</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
