--- a/main/html/content-areas/problem-solving/problem-solving.html
+++ b/main/html/content-areas/problem-solving/problem-solving.html
@@ -4,26 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Problem Solving - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
-        <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+        <a href="../../index.html" id="logo-link">
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo" />
         </a>
         <div class="header-text">
             <h1>Problem Solving</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/1.1-computational-thinking/1.1-computational-thinking.html" class="subtopic-box">
-            <h2>1.1 Computational Thinking</h2>
-        </a>
-        <a href="subtopic/1.2-algorithmic-design/1.2-algorithmic-design.html" class="subtopic-box">
-            <h2>1.2 Algorithmic Design</h2>
-        </a>
-        <a href="subtopic/1.3-strategies/1.3-strategies.html" class="subtopic-box">
-            <h2>1.3 Strategies</h2>
-        </a>
+        <h2>Content Area 1: Problem Solving</h2>
+        <a href="subtopic/1.1-computational-thinking/1.1-computational-thinking.html" class="subtopic-box">1.1 Computational Thinking</a>
+        <a href="subtopic/1.2-algorithmic-design/1.2-algorithmic-design.html" class="subtopic-box">1.2 Algorithmic Design</a>
+        <a href="subtopic/1.3-strategies/1.3-strategies.html" class="subtopic-box">1.3 Strategies</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
