--- a/main/html/content-areas/security/security.html
+++ b/main/html/content-areas/security/security.html
@@ -4,29 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Security - TLevelTutor</title>
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <header>
         <a href="../../index.html">
-            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+            <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo" />
         </a>
             <div class="header-text">
             <h1>Security</h1>
         </div>
     </header>
     <main>
-        <a href="subtopic/8.1-impact-of-security-breaches/8.1-impact-of-security-breaches.html" class="subtopic-box">
-            <h2>Impact of Security Breaches</h2>
-        </a>
-        <a href="subtopic/8.2-threats/8.2-threats.html" class="subtopic-box">
-            <h2>Threats</h2>
-        </a>
-        <a href="subtopic/8.3-security-protection-methods/8.3-security-protection-methods.html" class="subtopic-box">
-            <h2>Security Protection Methods</h2>
-        </a>
-        <a href="subtopic/8.4-cybersecurity-controls/8.4-cybersecurity-controls.html" class="subtopic-box">
-            <h2>Cybersecurity Controls</h2>
-        </a>
+        <h2>Content Area 8: Security</h2>
+        <a href="subtopic/8.1-impact-of-security-breaches/8.1-impact-of-security-breaches.html" class="subtopic-box">Impact of Security Breaches</a>
+        <a href="subtopic/8.2-threats/8.2-threats.html" class="subtopic-box">Threats</a>
+        <a href="subtopic/8.3-security-protection-methods/8.3-security-protection-methods.html" class="subtopic-box">Security Protection Methods</a>
+        <a href="subtopic/8.4-cybersecurity-controls/8.4-cybersecurity-controls.html" class="subtopic-box">Cybersecurity Controls</a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
