--- a/main/html/index.html
+++ b/main/html/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="../images/logo.png" alt="TLevelTutor Logo" width="100" height="100"/>
+      <img src="../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
     </a>
       <div class="header-text">      
         <h1>TLevelTutor</h1>
