added esp section and fixed subtopic areas to fit with new spec

--- a/main/html/content-areas/digital-environments/digital-environments.html
+++ b/main/html/content-areas/digital-environments/digital-environments.html
@@ -17,10 +17,13 @@
     </header>
     <main>
         <h2>Content Area 7: Digital Environments</h2>
-        <a href="subtopic/7.1-physical-digital-environments/7.1-physical-digital-environments.html" class="subtopic-box">7.1 Physical and Digital Environments</a>
-        <a href="subtopic/7.2-virtual-digital-environments/7.2-virtual-digital-environments.html" class="subtopic-box">7.2 Virtual Digital Environments</a>
-        <a href="subtopic/7.3-digital-networks/7.3-digital-networks.html" class="subtopic-box">7.3 Digital Networks</a>
-        <a href="subtopic/7.4-cloud/7.4-cloud.html" class="subtopic-box">7.4 Cloud</a>
+        <a href="subtopic/7.1-Hardware/7.1-Hardware.html" class="subtopic-box">7.1 Hardware</a>
+        <a href="subtopic/7.2-Software/7.2-Software.html" class="subtopic-box">7.2 Software</a>
+        <a href="subtopic/7.3-Networks/7.3-Networks.html" class="subtopic-box">7.3 Networks</a>
+        <a href="subtopic/7.4-Virtual-Environments/7.4-Virtual-Environments.html" class="subtopic-box">7.4 Virtual Environments</a>
+        <a href="subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html" class="subtopic-box">7.5 Cloud Environments</a>
+        <a href="subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html" class="subtopic-box">7.6 Resillient Digital Environments</a>
+
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
