--- a/main/html/content-areas/security/security.html
+++ b/main/html/content-areas/security/security.html
@@ -17,10 +17,10 @@
     </header>
     <main>
         <h2>Content Area 8: Security</h2>
-        <a href="subtopic/8.1-impact-of-security-breaches/8.1-impact-of-security-breaches.html" class="subtopic-box">Impact of Security Breaches</a>
-        <a href="subtopic/8.2-threats/8.2-threats.html" class="subtopic-box">Threats</a>
-        <a href="subtopic/8.3-security-protection-methods/8.3-security-protection-methods.html" class="subtopic-box">Security Protection Methods</a>
-        <a href="subtopic/8.4-cybersecurity-controls/8.4-cybersecurity-controls.html" class="subtopic-box">Cybersecurity Controls</a>
+        <a href="subtopic/8.1-Security-Risks/8.1-Security-Risks.html" class="subtopic-box">8.1 Security Risks</a>
+        <a href="subtopic/8.2-Types-of-Threats/8.2-Types-of-Threats.html" class="subtopic-box">8.2 Types of Threats</a>
+        <a href="subtopic/8.3-Threat-Mitigation/8.3-Threat-Mitigation.html" class="subtopic-box">8.3 Threat Mitigation</a>
+        <a href="subtopic/8.4-Effective-Security/8.4-Effective-Security.html" class="subtopic-box">8.4 Interrelationship of Components Required for Effective Security </a>
     </main>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
