--- a/main/html/index.html
+++ b/main/html/index.html
@@ -20,42 +20,64 @@
     <div class="content-area">
       <a href="content-areas/problem-solving/problem-solving.html" class="main-topic">
         <img src="../images/problem-solving.png" alt="Problem Solving" width="200" height="200"/>
-        <h3>Problem Solving</h3>
+        <h3>Problem Solving (CA1)</h3>
       </a>
       <a href="content-areas/intro-to-programming/intro-to-programming.html" class="main-topic">
         <img src="../images/intro-to-programming.png" alt="Introduction to Programming" width="200" height="200"/>
-        <h3>Introduction to Programming</h3>
+        <h3>Introduction to Programming (CA2)</h3>
       </a>
       <a href="content-areas/emerging-issues/emerging-issues.html" class="main-topic">
         <img src="../images/emerging-issues.png" alt="Emerging Issues" width="200" height="200"/>
-        <h3>Emerging Issues</h3>
+        <h3>Emerging Issues (CA3)</h3>
       </a>
       <a href="content-areas/legislation-and-regulatory-requirements/legislation-and-regulatory-requirements.html" class="main-topic">
         <img src="../images/legislation-and-regulatory-requirements.png" alt="Legislation and Regulatory Requirements" width="200" height="200"/>
-        <h3>Legislation and Regulatory Requirements</h3>
+        <h3>Legislation and Regulatory Requirements (CA4)</h3>
       </a>
       <a href="content-areas/business-context/business-context.html" class="main-topic">
         <img src="../images/business-context.png" alt="Business Context" width="200" height="200"/>
-        <h3>Business Context</h3>
+        <h3>Business Context (CA5)</h3>
       </a>
       <a href="content-areas/data/data.html" class="main-topic">
         <img src="../images/data.png" alt="Data" width="200" height="200"/>
-        <h3>Data</h3>
+        <h3>Data (CA6)</h3>
       </a>
       <a href="content-areas/digital-environments/digital-environments.html" class="main-topic">
         <img src="../images/digital-environments.png" alt="Digital Environments" width="200" height="200"/>
-        <h3>Digital Environments</h3>
+        <h3>Digital Environments (CA7)</h3>
       </a>
       <a href="content-areas/security/security.html" class="main-topic">
         <img src="../images/security.png" alt="Security" width="200" height="200"/>
-        <h3>Security</h3>
+        <h3>Security (CA8)</h3>
       </a>
-      <!--
-      <a href="content-areas/employer-set-projects/employer-set-projects.html" class="main-topic">
-        <img src="../images/employer-set-projects.png" alt="Employer Set Projects" width="200" height="200"/>
-        <h3>Employer Set Projects</h3>
+    </div>
+
+    <h2>Employer Set Project (ESP)</h2>
+    <div class="content-area">
+       <a href="employer-set-project/pre-task/pre-task.html" class="main-topic">
+        <img src="../images/pre-task.png" alt="Pre-Task" width="200" height="200"/>
+        <h3>Pre-Task</h3>
       </a>
-      -->
+       <a href="employer-set-project/Task 1-Planning-A-Project/Task1.html" class="main-topic">
+        <img src="../images/task1.png" alt="Task1" width="200" height="200"/>
+        <h3>Task 1: Planning A Project</h3>
+      </a>
+       <a href="employer-set-project/Task 2-Debugging-Existing-Code/Task2.html" class="main-topic">
+        <img src="../images/task2.png" alt="Task2" width="200" height="200"/>
+        <h3>Task 2: Debugging Existing Code</h3>
+      </a>      
+       <a href="employer-set-project/Task 3-Designing-A-Solution/Task3.html" class="main-topic">
+        <img src="../images/task3.png" alt="Task3" width="200" height="200"/>
+        <h3>Task 3: Designing A Solution</h3>
+      </a>
+       <a href="employer-set-project/Task 4a-Developing-A-Solution/Task4a.html" class="main-topic">
+        <img src="../images/task4a.png" alt="Task4a" width="200" height="200"/>
+        <h3>Task 4a: Developing A Solution</h3>
+      </a>
+       <a href="employer-set-project/Task 4b-Reflection/Task4b.html" class="main-topic">
+        <img src="../images/task4b.png" alt="Task4b" width="200" height="200"/>
+        <h3>Task 4b: Reflection</h3>
+      </a>
     </div>
   </main>
 </body>
