changed file names for easier navigation and prepared all paper 2 Content areas to have information added

--- a/main/html/index.html
+++ b/main/html/index.html
@@ -18,35 +18,35 @@
   <main>
     <h2>Choose Your Content Area</h2>
     <div class="content-area">
-      <a href="content-areas/problem-solving/problem-solving.html" class="main-topic">
+      <a href="content-areas/CA1 - Problem Solving/problem-solving.html" class="main-topic">
         <img src="../images/problem-solving.png" alt="Problem Solving" width="200" height="200"/>
         <h3>Problem Solving (CA1)</h3>
       </a>
-      <a href="content-areas/intro-to-programming/intro-to-programming.html" class="main-topic">
+      <a href="content-areas/CA2 - Intro To Programming/intro-to-programming.html" class="main-topic">
         <img src="../images/intro-to-programming.png" alt="Introduction to Programming" width="200" height="200"/>
         <h3>Introduction to Programming (CA2)</h3>
       </a>
-      <a href="content-areas/emerging-issues/emerging-issues.html" class="main-topic">
+      <a href="content-areas/CA3 - Emerging Issues/emerging-issues.html" class="main-topic">
         <img src="../images/emerging-issues.png" alt="Emerging Issues" width="200" height="200"/>
         <h3>Emerging Issues (CA3)</h3>
       </a>
-      <a href="content-areas/legislation-and-regulatory-requirements/legislation-and-regulatory-requirements.html" class="main-topic">
+      <a href="content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html" class="main-topic">
         <img src="../images/legislation-and-regulatory-requirements.png" alt="Legislation and Regulatory Requirements" width="200" height="200"/>
         <h3>Legislation and Regulatory Requirements (CA4)</h3>
       </a>
-      <a href="content-areas/business-context/business-context.html" class="main-topic">
+      <a href="content-areas/CA5 - Business Context/business-context.html" class="main-topic">
         <img src="../images/business-context.png" alt="Business Context" width="200" height="200"/>
         <h3>Business Context (CA5)</h3>
       </a>
-      <a href="content-areas/data/data.html" class="main-topic">
+      <a href="content-areas/CA6 - Data/data.html" class="main-topic">
         <img src="../images/data.png" alt="Data" width="200" height="200"/>
         <h3>Data (CA6)</h3>
       </a>
-      <a href="content-areas/digital-environments/digital-environments.html" class="main-topic">
+      <a href="content-areas/CA7 - Digital Environments/digital-environments.html" class="main-topic">
         <img src="../images/digital-environments.png" alt="Digital Environments" width="200" height="200"/>
         <h3>Digital Environments (CA7)</h3>
       </a>
-      <a href="content-areas/security/security.html" class="main-topic">
+      <a href="content-areas/CA8 - Security/security.html" class="main-topic">
         <img src="../images/security.png" alt="Security" width="200" height="200"/>
         <h3>Security (CA8)</h3>
       </a>
