added section for extra info abt T-level and an area for outside resources (can be deleted if no time)

--- a/main/html/index.html
+++ b/main/html/index.html
@@ -79,6 +79,18 @@
         <h3>Task 4b: Reflection</h3>
       </a>
     </div>
+
+    <h2> Other </h2>
+    <div class="content-area">
+      <a href="Other/About T-levels/About.html" class="main-topic">
+          <img src="../images/about.png" alt="about" width="200" height="200"/>
+          <h3>About The T-Level</h3>
+      </a>
+      <a href="Other/Resources/resources.html" class="main-topic">
+          <img src="../images/resources.png" alt="resources" width="200" height="200"/>
+          <h3>Other Resources</h3>
+      </a>
+    </div>
   </main>
 </body>
 <footer>
