Added info to the About section

--- a/main/html/Other/About T-levels/About.html
+++ b/main/html/Other/About T-levels/About.html
@@ -18,12 +18,72 @@
     </header>
 
     <main>
-        
+        <h2 class="heading">Assesments</h2>
+            <h4>ESP:</h4>
+            <p> In <strong>May</strong> next year, you will sit <strong>The ESP</strong>. </p>
+            <ul>
+                <li>It is made up of <strong>5 tasks</strong> that will take place over a 2 week window.</li>
+                <li>In total, the ESP will last <strong>14hrs 30mins</strong>. </li>
+                    <ul>
+                        <li>Task 1: Planning A Project - <strong>3 Hours</strong> </li>
+                        <li>Task 2: Debugging Existing Code - <strong>3 Hours</strong> </li>
+                        <li>Task 3: Designing A Solution - <strong>3 Hours</strong></li>
+                        <li>Task 4a: Developing A Solution - <strong>4 Hours</strong> </li>
+                        <li>Task 4b: Reflection - <strong>1.5 Hours</strong></li>
+                    </ul>
+                    <p></p>
+                <li>It is worth <strong>100 Marks</strong> which is <strong>40%</strong> of your final grade for year 12.</li>
+                <li>You will be graded from <strong>A* to E</strong> based on your score<strong> out of 100</strong>.</li>
+            </ul>
+
+            <h4>Core Papers:</h4>
+            <p> In <strong>June</strong> next year, you will sit <strong>2 core papers</strong>. </p>
+            <ul>
+                <li>Each paper will last <strong>2hrs 15mins</strong>.</li>
+                <li>Each paper is worth <strong>90 Marks</strong> which is <strong>30%</strong> of your final grade for year 12.</li>
+                <li>The papers will cover the following topics:
+                    <ul>
+                        <li>Paper 1: <strong>Digital Analysis, Legislation & Emerging Issues</strong> </li>
+                            <ul>
+                                <li>CA1: Problem Solving</li>
+                                <li>CA2: Programming</li>
+                                <li>CA3: Emerging Issues</li>
+                                <li>CA4: Legislation and Regulatory Requirements</li>
+                            </ul>
+                            <p></p>
+                        <li>Paper 2: <strong>The Business Environment</strong></li>
+                            <ul>
+                                <li>CA5: Business</li>
+                                <li>CA6: Data</li>
+                                <li>CA7: Digital Environments</li>
+                                <li>CA8: Security</li>
+                            </ul>
+                    </ul>
+                </li>
+                <p></p>
+                <li>Your grade for the papers will come from <strong>combining the marks</strong>.</li>
+                <li>You will be graded from <strong>A* to E</strong> based on your score<strong> out of 180</strong>.</li>
+            </ul>
+            <h4>Importance:</h4>
+            <p>These assesments make up your <strong>grade for year 12</strong> </p>
+            <ul>
+                <li>You will be graded from <strong>A* to E</strong> based on your score<strong> out of 280</strong>.</li>
+                <li>This is <strong>half your overall grade</strong> for the course. </li>
+                <li>Based on your grade, you <strong>may be capped</strong> as to what grade you can get in year 13.</li>
+                <ul>
+                    <li>If you get an <strong>A or below</strong>, you <strong>Cannot get a Distinction*</strong> overall. </li>
+                    <li>If you get a <strong>D or below</strong>, you Cannot get a <strong>Cannot get a Distinction or a Distincton*</strong> overall.</li>
+                </ul>
+                <li>That being said, you can retake at different points if you need too. </li>
+                <ul>
+                    <li><em>however, it is <strong>highly recommended</strong> you try your best first time round to avoid unnecessary stress in year 13</em></li>
+                </ul>
+            </ul> 
     </main>
     
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
-</body>
+</body> 
 </html>
