Added information too Pre-Task Section.

--- a/main/html/Other/About T-levels/About.html
+++ b/main/html/Other/About T-levels/About.html
@@ -74,10 +74,7 @@
                     <li>If you get an <strong>A or below</strong>, you <strong>Cannot get a Distinction*</strong> overall. </li>
                     <li>If you get a <strong>D or below</strong>, you Cannot get a <strong>Cannot get a Distinction or a Distincton*</strong> overall.</li>
                 </ul>
-                <li>That being said, you can retake at different points if you need too. </li>
-                <ul>
-                    <li><em>however, it is <strong>highly recommended</strong> you try your best first time round to avoid unnecessary stress in year 13</em></li>
-                </ul>
+                <li>That being said, you can retake at different points if you need too. <br> &ensp; <em>however, it is <strong>highly recommended</strong> you try your best first time round to avoid unnecessary stress in year 13</em></li>
             </ul> 
     </main>
     
