--- a/main/html/employer-set-project/Pre-Task/Pre-Task.html
+++ b/main/html/employer-set-project/Pre-Task/Pre-Task.html
@@ -18,7 +18,27 @@
     </header>
 
     <main>
-        
+        <h2 class="heading">ESP - Pre-Task</h2>
+
+        <h4>What Is It?</h4>
+        <p> The Pre-Task for the ESP introduces you to the business sector the ESP will revolve around (e.g: Retail, Real Estate, Fast Food etc.) which is useful as it can give you an idea of why the company might use digital tools/ technologies.</p>
+        <p> During the pre-task you are allowed to: 
+            <ul>
+                <li> Access the internet </li>
+                <li> Talk with other students <br> &ensp; <em> Generally, you will be in teams of six, however you can still communicate with those outside of your group. </em></li>
+                <li> Make notes about your research <br> &ensp; <em> However you <strong>Cannot</strong> bring these notes into the other exams. </em></li>
+            </ul>
+        </p>
+        <p> 
+            The Pre-Task will outline the goals & requirements of the solution/ system and recommend different tools/ technologies you could research that are commonly used in the sector outlines. <br>
+            <br> You are not expected to submit anything for the Pre-Task. 
+        </p>
+
+        <h4>Marks?</h4>
+        <p> The Pre-Task is worth 0 marks. <br> It is not assessed and only exists so that you have time to understand the business context. </p>
+
+        <h4>Time?</h4>
+        <p> You will have a week for the Pre-Task. <br> &emsp; <em> However, it is advised you spend around <strong>6 hours</strong> on the task.</em> </p>
     </main>
     
     <footer>
