--- a/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
+++ b/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
@@ -18,7 +18,17 @@
     </header>
 
     <main>
+        <h2 class="heading">ESP - Task 2: Debugging Existing Code</h2>
         
+        <h4>What Is It?</h4>
+        <p> Task 2 is  </p>
+
+        <h4>Marks?</h4>
+        <p>Task 2 is worth </p>
+
+        <h4>Time?</h4>
+        <p> You will have 3 Hours to complete this task</p>
+
     </main>
     
     <footer>
