--- a/main/html/employer-set-project/Task 3-Designing-A-Solution/Task3.html
+++ b/main/html/employer-set-project/Task 3-Designing-A-Solution/Task3.html
@@ -18,7 +18,17 @@
     </header>
 
     <main>
+        <h2 class="heading">ESP - Task 3: Designing A Solution</h2>
         
+        <h4>What Is It?</h4>
+        <p> Task 3 is  </p>
+
+        <h4>Marks?</h4>
+        <p>Task 3 is worth </p>
+
+        <h4>Time?</h4>
+        <p> You will have 3 Hours to complete this task</p>
+
     </main>
     
     <footer>
