--- a/main/html/employer-set-project/Task 4a-Developing-A-Solution/Task4a.html
+++ b/main/html/employer-set-project/Task 4a-Developing-A-Solution/Task4a.html
@@ -18,7 +18,17 @@
     </header>
 
     <main>
+        <h2 class="heading">ESP - Task 4a: Developing A Solution</h2>
         
+        <h4>What Is It?</h4>
+        <p> Task 4a is  </p>
+
+        <h4>Marks?</h4>
+        <p>Task 4a is worth </p>
+
+        <h4>Time?</h4>
+        <p> You will have 4 Hours to complete this task</p>
+
     </main>
     
     <footer>
