--- a/main/html/employer-set-project/Task 1-Planning-A-Project/Task1.html
+++ b/main/html/employer-set-project/Task 1-Planning-A-Project/Task1.html
@@ -110,13 +110,13 @@
             <br><br> It typically includes decisions such as:
             <ul>
                 <li> Why did you choose a certain employee to do a task?
-                    <br><em>e.g: why did you choose employee A to do Task 1 rather than employee B?</em></li>
+                    <br> &ensp; <em>e.g: why did you choose employee A to do Task 1 rather than employee B?</em></li>
                 <li> Why did you allocate a certain amount of time to a task?
-                    <br><em>e.g: why did you allocate 4 hours to Task 2 instead of 5 hours?</em></li>
+                    <br> &ensp; <em>e.g: why did you allocate 4 hours to Task 2 instead of 5 hours?</em></li>
                 <li> Why did you choose to use a certain piece of software or hardware?
-                    <br><em>e.g: why did you choose to use a cloud server over a physical one?</em></li>
+                    <br> &ensp; <em>e.g: why did you choose to use a cloud server over a physical one?</em></li>
                 <li> Why did you choose to do tasks in a certain order?
-                    <br><em>e.g: why did you choose to do Task 7 before Task 4?</em></li>
+                    <br> &ensp; <em>e.g: why did you choose to do Task 7 before Task 4?</em></li>
             </ul>
             <strong><em> You get the idea..</em></strong></li>
             </p>
