Done all of CA5

--- a/main/html/content-areas/CA5 - Business Context/subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html
+++ b/main/html/content-areas/CA5 - Business Context/subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html
@@ -18,7 +18,50 @@
     </header>
 
     <main>
-        
+         <h2 class="heading"> Subtopic 5.3: Risk to Organisations of Using Digital Systems </h2>
+
+    <h3 class="sub-heading"> 5.3.1 Understand the potential risks to organisations when using digital systems </h3>
+
+    <h4>Security breaches</h4>
+    <ul>
+        <li><strong>Compromised confidentiality:</strong> Sensitive information, such as customer data or trade secrets, can be exposed. Example: A hack on a healthcare provider could reveal patient records.</li>
+        <li><strong>Loss of integrity:</strong> Data can be altered or corrupted, either accidentally or maliciously. Example: A financial database could be tampered with, leading to incorrect records.</li>
+        <li><strong>Reduced availability:</strong> Systems might become unavailable due to attacks like Distributed Denial of Service (DDoS), preventing access for employees or customers.</li>
+    </ul>
+
+    <h4>Privacy breaches</h4>
+    <ul>
+        <p><strong>Personal information:</strong> Breaches can expose customer or employee personal data, such as addresses, phone numbers, or financial information.</p>
+        <p><strong>Business information:</strong> Sensitive organisational information, like intellectual property or strategic plans, can be leaked, harming competitive advantage.</p>
+    </ul>
+
+    <h4>Regulatory and legal non-compliance</h4>
+    <p>Failing to comply with laws and regulations can result in fines, legal action, or loss of licences. Example: Not following GDPR regulations when handling personal data.</p>
+
+    <h4>Audience exclusion</h4>
+    <ul>
+        <p><strong>Biases:</strong> Algorithms or AI tools can unintentionally discriminate, leading to unfair treatment of certain groups.</p>
+        <p><strong>Poor user experience:</strong> Systems that are difficult to navigate or inaccessible can discourage users, limiting engagement or sales.</p>
+    </ul>
+
+    <h4>Emerging rival technologies</h4>
+    <p>Failure to adopt new technologies can result in competitors gaining an advantage and loss of market share. Example: Businesses ignoring AI automation may be outperformed by competitors who use it efficiently.</p>
+
+    <h4>Technical issues</h4>
+    <ul>
+        <p><strong>Reliance and system failure:</strong> Over-reliance on a single system can be risky if it fails. Example: If a cloud service goes down, employees may be unable to work.</p>
+        <p><strong>System not fit for purpose:</strong> Implementing a system that does not meet organisational needs can reduce productivity and create inefficiencies.</p>
+    </ul>
+
+    <h3 class="sub-heading">5.3.2 Understand the potential impact of risks to organisations when using digital systems</h3>
+
+    <ul>
+        <li><strong>Legal action:</strong> Organisations may face lawsuits from customers, employees, or regulators if they fail to protect data or comply with laws.</li>
+        <li><strong>Fines:</strong> Regulatory bodies can impose financial penalties for breaches of laws like GDPR or industry-specific regulations.</li>
+        <li><strong>Reputational damage:</strong> News of a breach or failure can harm public perception, leading to loss of customer trust.</li>
+        <li><strong>Withdrawal of licence to practise:</strong> Certain industries, such as healthcare or finance, may lose their legal right to operate if they fail to meet compliance standards.</li>
+        <li><strong>Loss of business:</strong> Customers may switch to competitors, contracts may be lost, and revenue may decline.</li>
+    </ul>
     </main>
     
     <footer>
